--- a/src/main/resources/public/pages/manage/tasks_add.html
+++ b/src/main/resources/public/pages/manage/tasks_add.html
@@ -65,6 +65,9 @@
 		.form-group-1{
 			width: 100%;
 		}
+		.form-group-3{
+			height:4% !important;
+		}
 		.form-group-1 textarea,.form-group-2 textarea{width: 60%!important;min-height: 80px;padding: 4px 10px;}
 		.form-group-1 textarea{width: calc(70.1%)!important;border:1px solid #cccccc;margin-bottom: 4px;}
 		.form-group-2{
@@ -306,6 +309,12 @@
 
 <body>
     <div class="content">
+        <div class="form-group-3 addHide" style="width: auto">
+            <span class="checkbox-text"> [00000001] TCM DEMO TASK &nbsp|</span>
+            <a value="start" style="padding: 5px;" class="checkbox-text" href="javascript:void(0)" @click="audio()">运行信息</a>
+            <a value="start" style="padding: 5px;" class="checkbox-text" href="javascript:void(0)" @click="audio()">运行日志</a>
+            <a value="start" style="padding: 5px;" class="checkbox-text" href="javascript:void(0)" @click="audio()">参数配置</a>
+        </div>
         <fieldset style="margin-top: 0px;">
             <legend>常规</legend>
             <div class="form-group" style="width: auto">
@@ -313,7 +322,7 @@
 			<input type="text" class="form-control"/>
 			<input type="checkbox"/><span class="checkbox-text">自动运行</span>
 			<input type="checkbox"/><span class="checkbox-text">禁止运行</span>
-		</div>
+		    </div>
         <div class="form-group" style="width: auto">
 			<label class="label-text">*引用插件：</label>
 			<select class="form-control required activeType" v-model="codeTypeId" data-toggle="popover" data-placement="bottom" data-content=""/>
