--- a/src/main/resources/public/pages/manage/tasks3.html
+++ b/src/main/resources/public/pages/manage/tasks3.html
@@ -14,12 +14,12 @@
 		<link href="../base/layer/skin/default/layer.css" rel="stylesheet" />
 		<link href="../css/baseall.css" rel="stylesheet" />
 		<link href="../base/jsonanalyze/css/jsonanalysis.css" rel="stylesheet" />
-		<link href="../css/database_config.css" rel="stylesheet" />
+		<link href="../css/tasks.css" rel="stylesheet" />
 		<script src="../base/jquery/jquery-1.11.0.min.js"></script>
 		<script src="../js/skin.js"></script>
 		<script src="../base/layer/layer.js"></script>
 
-		<title>数据库配置</title>
+		<title>任务管理</title>
 		<style>
 		   html,body{height: 100%;}
 		   body{font-size: 13px;background:white;}
@@ -106,7 +106,7 @@
 			<div class="content-title" id="queryCondition">
 				<div class="form-inline">
 					<div class="form-group form-group-3">
-						<label class="control-label">用户名:</label>
+						<label class="control-label">任务名称:</label>
 						<input class="form-control" id="userId" type="text"/>
 					</div>
 				</div>
@@ -115,36 +115,47 @@
 						<button style="margin-bottom: 10px;" type="button" class="btn btn-blue query-btn"><span class="glyphicon glyphicon-search"></span> 查询</button>
 					</div>
 					<div class="form-group">
-				    <button style="margin-bottom: 10px;" type="button" class="btn btn-blue plus" id="dataBase" data-toggle="modal" data-target=".new-modal" ><span class="glyphicon glyphicon-plus"></span> 添加数据库</button>
-					</div>
-					<div style="clear:both"></div>
+			            <button style="margin-bottom: 10px;" type="button" class="btn btn-blue plus" id="dataBase" ><span class="glyphicon glyphicon-plus"></span> 新建任务</button>
+        			</div>
+        			<div class="form-group">
+			            <button style="margin-bottom: 10px;" type="button" class="btn btn-blue deletes" id="deletes" ><span class="glyphicon glyphicon-plus"></span> 批量删除</button>
+        			</div>
+        			<div style="clear:both"></div>
 				</div>
 			</div>
 			<div id="app">
 				<table style="font-size:13px" border="0" class="table table-hover  tab-own" cellpadding="0" cellspacing="0">
+				
 					<thead>
 					<tr>
-						<th>序号</th>
-					    <th>名称</th>
-						<th>驱动</th>
-						<th>链接</th>
-                        <th>用户名</th>
-                        <th>密码</th>
+						<th>ID</th>
+						<th>任务名称</th>
+					    <th>当前状态</th>
+						<th>最后运行时间</th>
+						<th>统计</th>
+						<th>其他</th>
                         <th>操作</th>
 					</tr>
 					</thead>
 					<tbody>
 						<tr v-for="(tabtr,index) in tabData">
 							<td>{{index+1}}</td>
-			                <td>{{tabtr.dbName}}</td>
-			                <td>{{tabtr.dbDriver}}</td>
-			                <td>{{tabtr.dbUrl}}</td>
-			                <td>{{tabtr.dbUser}}</td>
-			                <td>{{tabtr.dbPass}}</td>
+							<td>{{tabtr.f}}</td>
+			                <td>运行</td>
+			                <td>2018-06-27 10:22:18</td>
+			                <td>成功:{{tabtr.a}}|失败:{{tabtr.b}}|等待:{{tabtr.c}}|忽略:{{tabtr.d}}</td>
+			                <td>{{tabtr.e}}</td>
+			                <!-- <td>
+			                    <a value="start" href="javascript:void(0)" @click="audio()">声音报警</a>
+			                    |
+			                    <a value="start" href="javascript:void(0)"  @click="audio()">清除所有错误</a>
+			                </td> -->
                             <td>
-                                <span class="fa fa-random Check" @click="Check()" title="测试连接" data-toggle="modal" style=" padding-right: 10px;"></span>
-                                <span class="fa fa-edit Updatask" @click="Updatask(index,tabtr.dbId)" title="修改" data-toggle="modal" data-target=".new-modal"  style="color: green;"></span>
-                                <span class="fa fa-trash dataDelete" @click="tabDelete(tabtr.dbId)" title="删除" data-toggle="modal" data-target=".delete-modal"  style="color: #C13333;padding-left: 5px;" ></span>
+                                <span class="fa fa-play-circle" @click="start()" title="启动" data-toggle="modal"  style="color: green;font-size: 15px;"></span>
+                                <span class="fa fa-dot-circle-o" @click="stop()" title="停止" data-toggle="modal"  style="color: green;font-size: 15px;"></span>
+                                <span class="fa fa-warning" @click="termination()" title="终止" data-toggle="modal"  style="color: green;font-size: 15px;"></span>
+                                <span class="fa fa-edit Updatask" @click="updatask(index)" title="修改" data-toggle="modal" data-target=".new-modal"  style="color: green;"></span>
+                                <span class="fa fa-trash dataDelete" @click="tabDelete()" title="删除" data-toggle="modal" data-target=".delete-modal" style="color: #C13333;padding-left: 5px;font-size: 15px;" ></span>
                             </td>
                         </tr>
 					</tbody>
@@ -169,45 +180,6 @@
 				</ul>
 			</div>
 		</div>
-		<!--添加数据库-->
-		<div class="modal fade new-modal" id="addChange" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
-			<div class="modal-dialog" role="document">
-				<div class="modal-content">
-					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-label="close">
-							<span>×</span>
-						</button>
-						<h4 class="modal-title"></h4>
-					</div>
-					<div class="modal-body form-inline inputNewData">
-						<div class="form-group">
-							<label>名称：</label>
-							<input type="text" id="dbName" class="form-control input-sm required" :readonly="modelData.readOnly" v-model="modelData.businessName" :style="modelData.readOnly ? '' : (modelData.businessName === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;')" data-container="body" data-toggle="popover" data-placement="right" data-content="" />
-						</div>
-						<div class="form-group">
-							<label>驱动：</label>
-							<input type="text" id="dbDriver" class="form-control input-sm required" :readonly="modelData.readOnly" v-model="modelData.loginName" :style="modelData.readOnly ? '' : (modelData.loginName === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;')" data-container="body" data-toggle="popover" data-placement="right" data-content="" />
-						</div>
-						<div class="form-group">
-							<label>链接：</label>
-							<input type="text" id = "dbUrl" class="form-control input-sm required" v-model="modelData.password" :style="modelData.password === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;'" data-container="body" data-toggle="popover" data-placement="right" data-content="" placeholder = ""/>
-						</div>
-						<div class="form-group" v-else>
-							<label>用户名：</label>
-							<input type="text" id="dbUser" class="form-control input-sm required"  placeholder = "密码由6~32位数字字母组成"/>
-						</div>
-						<div class="form-group">
-							<label>密码：</label>
-							<input type="password" id = "dbPass" class="form-control input-sm required" v-model="modelData.businessType" :style="modelData.businessType === '' ? 'background: #FFF3F3 !important;' : 'background: none !important;'" data-container="body" data-toggle="popover" data-placement="right" data-content="客户类型不能为空" />
-						</div>
-					<div class="modal-footer">
-						<button type="reset" class="btn btn-default btn-sm" data-dismiss="modal">取消</button>
-						<button type="submit" class="btn btn-primary btn-sm submit">确定</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	    </div>
 		<!--删除-->
 		<div class="modal fade delete-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
 			<div class="modal-dialog modal-sm" role="document">
@@ -230,12 +202,29 @@
 				</div>
 			</div>
 		</div>
+		<!--批量删除-->
+		<div class="modal fade onclose-modal-all" tabindex="-1" role="dialog" id="myModel" aria-labelledby="mySmallModalLabel">
+			<div class="modal-dialog modal-sm" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-label="close">
+							<span>×</span>
+						</button>
+						<h4 class="modal-title">确定要删除？</h4>
+					</div>
+					<div class="modal-body">
+						<button type="reset" class="btn btn-default btn-sm" data-dismiss="modal">取消</button>
+						<button type="submit" class="btn btn-success btn-sm" data-dismiss="modal">确定</button>
+					</div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="../base/vue/vue.min.js"></script>
 	<script src="../base/bootstrap/js/bootstrap.min.js"></script>
 	<script src="../js/util.js"></script>
 	<!-- <script src="../js/common.js"></script> -->
 	<script src="../base/jsonanalyze/js/analyze.js"></script>
-	<script src="../js/database_config.vue.js"></script>
+	<script src="../js/tasks.vue.js"></script>
 
 </html>
