--- a/src/main/resources/public/pages/manage/proxy_server.html
+++ b/src/main/resources/public/pages/manage/proxy_server.html
@@ -125,8 +125,7 @@
 					<thead>
 					<tr>
 						<th>序号</th>
-						<th>服务器地址</th>
-						<th>服务器代理端口</th>
+						<th>代理服务器地址与端口号</th>
 						<th>说明</th>
 						<th>操作</th>
 					</tr>
@@ -134,15 +133,14 @@
 					<tbody>
 						<tr v-for="(tabtr,index) in tabData">
 							<td>{{tabtr.id}}</td>
-							<td>{{tabtr.agent}}</td>
-							<td>{{tabtr.port}}</td>
+							<td>{{tabtr.agentName}}</td>
 							<td>{{tabtr.memo}}</td>
                             <td>
-                             	<span class="fa fa-plus addApplication" @click="addApplication(tabtr.id,tabtr.agent,tabtr.port,tabtr.memo)" title="添加应用服务器" data-toggle="modal" data-target=".application-modal" style=" padding-right: 10px;"></span>
-                                <span class="fa fa-random dataConnect" @click="dataConnect(tabtr.id,tabtr.agent,tabtr.port)" title="测试连接" data-toggle="modal" data-target=".connect-modal" style=" padding-right: 10px;"></span>
-                                <span class="fa fa-edit dataChange" @click="dataChange(index)" title="修改" data-toggle="modal" data-target=".new-modal" style="color: green;"></span>
-                                <span class="fa fa-trash dataDelete" @click="dataDelete(tabtr.id)" title="删除" data-toggle="modal" data-target=".delete-modal" style="color: #C13333;padding-left: 5px;" ></span>
-                             	<span class="fa fa-eject dataLog" @click="dataLog(tabtr.id,tabtr.agent,tabtr.port,tabtr.memo)" title="日志信息" data-toggle="modal"  data-target=".info-modal" style="color: #C13333;padding-left: 5px;" ></span>
+                             	<span class="fa fa-edit dataChange" @click="dataChange(index)" title="修改" data-toggle="modal" data-target=".new-modal" style="color: green;"></span>
+                                <span class="fa fa-trash dataDelete" @click="dataDelete(tabtr.id,tabtr.agentName)" title="删除" data-toggle="modal" data-target=".delete-modal" style="color: #C13333;padding-left: 5px;" ></span>
+                             <!-- 	<span class="fa fa-eject dataLog" @click="dataLog(tabtr.id,tabtr.agentName,tabtr.memo)" title="日志信息" data-toggle="modal"  data-target=".info-modal" style="color: #C13333;padding-left: 5px;" ></span> -->
+                           		<span class="fa fa-plus addApplication" @click="addApplication(tabtr.id,tabtr.agentName,tabtr.memo)" title="添加应用服务器" data-toggle="modal" data-target=".application-modal" style=" padding-right: 10px;"></span>
+                                <span class="fa fa-random dataConnect" @click="dataConnect(tabtr.id,tabtr.agentName)" title="测试连接" data-toggle="modal" data-target=".connect-modal" style=" padding-right: 10px;"></span>
                             </td>
                         </tr>
 					</tbody>
@@ -259,7 +257,7 @@
 						</div>
 						<div class="form-group">
 							<label>代理服务器说明：</label>
-							<input type="text" id="agentMemo" class="form-control input-sm " v-model="modelData.agentMemo" disabled="disabled"/>
+							<input type="text" id="agentMemo" class="form-control input-sm " v-model="modelData.memo" disabled="disabled"/>
 						</div>
 						<div class="form-group">
 							<label>应用服务器名称：</label>
