--- a/src/main/resources/resources/index.html
+++ b/src/main/resources/resources/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<script src="./base/js/util.js"></script>
+		<script src="./view/js/util.js"></script>
 		<script type="text/javascript">
-			location.href= util.agent().baseUrl +"/view/homepage/index.html";
+			location.href= util.agent().baseUrl +"/view/manage/server.html";
 		</script>
 	</head>
 </html>
