--- a/src/main/resources/public/pages/manage/database_config.html
+++ b/src/main/resources/public/pages/manage/database_config.html
@@ -112,7 +112,7 @@
 				</div>
 				<div class="form-inline" style="position: absolute;right: 0;top: 0;">
 					<div class="form-group">
-						<button style="margin-bottom: 10px;" type="button" class="btn btn-blue query-btn"><span class="glyphicon glyphicon-search"></span> 查询</button>
+						<button style="margin-bottom: 10px;" id = "search" type="button" class="btn btn-blue query-btn"><span class="glyphicon glyphicon-search"></span> 查询</button>
 					</div>
 					<div class="form-group">
 				    <button style="margin-bottom: 10px;" type="button" class="btn btn-blue plus" id="dataBase" data-toggle="modal" data-target=".new-modal" ><span class="glyphicon glyphicon-plus"></span> 添加数据库</button>
@@ -136,15 +136,15 @@
 					<tbody>
 						<tr v-for="(tabtr,index) in tabData">
 							<td>{{index+1}}</td>
-			                <td>{{tabtr.dbName}}</td>
-			                <td>{{tabtr.dbDriver}}</td>
-			                <td>{{tabtr.dbUrl}}</td>
-			                <td>{{tabtr.dbUser}}</td>
-			                <td>{{tabtr.dbPass}}</td>
+			                <td>{{tabtr.name}}</td>
+			                <td>{{tabtr.driver}}</td>
+			                <td>{{tabtr.url}}</td>
+			                <td>{{tabtr.user}}</td>
+			                <td>{{tabtr.pass}}</td>
                             <td>
-                                <span class="fa fa-random Check" @click="Check()" title="测试连接" data-toggle="modal" style=" padding-right: 10px;"></span>
-                                <span class="fa fa-edit Updatask" @click="Updatask(index,tabtr.dbId)" title="修改" data-toggle="modal" data-target=".new-modal"  style="color: green;"></span>
-                                <span class="fa fa-trash dataDelete" @click="tabDelete(tabtr.dbId)" title="删除" data-toggle="modal" data-target=".delete-modal"  style="color: #C13333;padding-left: 5px;" ></span>
+                                <span class="fa fa-random Check" @click="Check(index)" title="测试连接" data-toggle="modal" style=" padding-right: 10px;"></span>
+                                <span class="fa fa-edit Updatask" @click="Updatask(index,tabtr.id)" title="修改" data-toggle="modal" data-target=".new-modal"  style="color: green;"></span>
+                                <span class="fa fa-trash dataDelete" @click="tabDelete(tabtr.id)" title="删除" data-toggle="modal" data-target=".delete-modal"  style="color: #C13333;padding-left: 5px;" ></span>
                             </td>
                         </tr>
 					</tbody>
@@ -202,7 +202,7 @@
 						</div>
 					<div class="modal-footer">
 						<button type="reset" class="btn btn-default btn-sm" data-dismiss="modal">取消</button>
-						<button type="submit" class="btn btn-primary btn-sm submit">确定</button>
+						<button type="submit" class="btn btn-primary btn-sm submit" data-dismiss="modal">确定</button>
 					</div>
 				</div>
 			</div>
