--- a/src/main/resources/public/pages/manage/plugins.html
+++ b/src/main/resources/public/pages/manage/plugins.html
@@ -124,24 +124,24 @@
 				<table style="font-size:13px" border="0" class="table table-hover  tab-own" cellpadding="0" cellspacing="0">
 					<thead>
 					<tr>
-						<th>序号</th>
-						<th>名称</th>
+						<th>插件ID</th>
+						<th>插件名称</th>
 						<th>入口类</th>
 						<th>版本</th>
-						<th>状态</th>
+						<th>说明</th>
 						<th>操作</th>
 					</tr>
 					</thead>
 					<tbody>
 						<tr v-for="(tabtr,index) in tabData">
 							<td>{{tabtr.id}}</td>
-						    <td>{{tabtr.pluginName}}</td>
-							<td>{{tabtr.entryClass}}</td>
-							<td>{{tabtr.version}}</td>
-							<td>{{tabtr.error}}</td>
+						    <td>{{tabtr.PluginName}}</td>
+							<td>{{tabtr.EntryClass}}</td>
+							<td>{{tabtr.Version}}</td>
+							<td>{{tabtr.PluginMemo}}</td>
                             <td>
-                                <span class="fa fa-repeat dataReload" @click="dataReload(tabtr.id,tabtr.pluginName,tabtr.entryClass)" title="重载" data-toggle="modal" data-target=".reload-modal" style=" padding-right: 10px;"></span>
-                                <span class="fa fa-edit dataChange" @click="dataChange(index)" title="修改" data-toggle="modal" data-target=".new-modal" style="color: green;"></span>
+                                <span class="fa fa-repeat dataReload" @click="dataReload(tabtr.id)" title="重载" data-toggle="modal" style=" padding-right: 10px;"></span><!-- data-target=".reload-modal"  -->
+                                <span class="fa fa-edit dataChange" @click="dataChange(tabtr.id,tabtr.PluginName,tabtr.EntryClass)" title="修改" data-toggle="modal" style="color: green;"></span><!-- data-target=".new-modal" -->
                                 <span class="fa fa-trash dataDelete" @click="dataDelete(tabtr.id)" title="删除" data-toggle="modal" data-target=".delete-modal" style="color: #C13333;padding-left: 5px;" ></span>
                             </td>
                         </tr>
