--- a/src/main/resources/public/pages/manage/server.html
+++ b/src/main/resources/public/pages/manage/server.html
@@ -10,7 +10,7 @@
 <link class="bootselect" href="" rel="stylesheet" type="text/css" />
 <link href="../base/bootstrap/bootstrap-skin/bootstrap-cerulean.css"
 	rel="stylesheet" />
-<link href="../base/font-awesome/css/font-awesome.min.css"
+<link href="../base/font-awesome-4.7.0/css/font-awesome.min.css"
 	rel="stylesheet" />
 <link href="../base/layer/skin/default/layer.css" rel="stylesheet" />
 <link href="../css/baseall.css" rel="stylesheet" />
